attempt to fix mobile and tablet detail page column alignment

--- a/assets/css/detail.css
+++ b/assets/css/detail.css
@@ -114,7 +114,7 @@ li{
     max-height: 500px;
     width: 100%;
     overflow: hidden;
-    display: flex;
+/*    display: flex;*/
     
 
 } 
